app/src/main/java/com/example/firewatch/shared/errors/BurnStateNotExists.kt
package com.example.firewatch.shared.errors

class BurnStateNotExists(burnState: String)
    : IllegalArgumentException("The BurnState $burnState does not exists") {
}